Added get all sessions route
