# src/app/resources/openapi_spec.yml
@@ -58,7 +58,6 @@ paths:
           description: Unauthorized
         '500':
           description: Internal server error
-
   /participant:
     get:
       tags: [Participant]
@@ -73,7 +72,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Participant'
+                  $ref: '#/components/schemas/ParticipantResponse'
         '401':
           description: Unauthorized
         '500':
@@ -100,8 +99,6 @@ paths:
                   type: string
                 activityLevel:
                   type: string
-                hasAcceptedTerms:
-                  type: boolean
               required:
                 - firstName
                 - lastName
@@ -145,7 +142,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Participant'
+                $ref: '#/components/schemas/ParticipantResponse'
         '400':
           description: Bad request
         '401':
@@ -176,8 +173,72 @@ paths:
           description: No content
         '500':
           description: Internal server error
-
+    patch:
+      tags: [Participant]
+      summary: Update participant by ID
+      security:
+        - ApiKeyAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                email:
+                  type: string
+                age:
+                  type: integer
+                gender:
+                  type: string
+                activityLevel:
+                  type: string
+                hasAcceptedTerms:
+                  type: boolean
+              additionalProperties: false
+      responses:
+        '200':
+          description: Participant updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ParticipantPatch'
+        '400':
+          description: Bad request
+        '401':
+          description: Unauthorized
+        '404':
+          description: Participant not found
+        '500':
+          description: Internal server error
+  
   /session:
+    get:
+        tags: [Session]
+        summary: Get all sessions
+        security:
+          - ApiKeyAuth: []
+        responses:
+          '200':
+            description: Successful retrieval of sessions
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Session'
+          '401':
+            description: Unauthorized
+          '500':
+            description: Internal server error
     post:
       tags: [Session]
       summary: Create a new session
@@ -226,7 +287,7 @@ paths:
           description: Unable to insert session or data
         '500':
           description: Internal server error
-
+  
   /session/{id}:
     get:
       tags: [Session]
@@ -409,7 +470,24 @@ components:
           type: integer
         token:
           type: string
-    Participant:
+    ParticipantResponse:
+      type: object
+      properties:
+        participantId:
+          type: integer
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        age:
+          type: integer
+        gender:
+          type: string
+        activityLevel:
+          type: string
+    ParticipantPatch:
       type: object
       properties:
         participantId:
@@ -455,18 +533,3 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/SessionData'
-    Timeframe:
-      type: object
-      properties:
-        timeframeId:
-          type: integer
-        sessionId:
-          type: integer
-        description:
-          type: string
-        startTime:
-          type: string
-          format: date-time
-        endTime:
-          type: string
-          format: date-time
