# src/app/routes/session.routes.ts
@@ -5,6 +5,9 @@ import { authenticate } from "../middleware/auth.middleware";
 
 module.exports = (app: Express) => {
     app.route(rootUrl + '/session')
+    .get(authenticate, session.getSessions);
+
+    app.route(rootUrl + '/session')
     .post(authenticate, session.createSession);
 
     app.route(rootUrl + '/session/:id')
